# obsidian-zola

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  postprocessors.rs  utils.rs
tests/: simple_test.rs
tests/expected_output/: about.md  edge-cases.md  index.md  snippet.md
tests/expected_output/docs/: tutorial.md
tests/test_vault/: about.md  edge-cases.md  index.md  snippet.md
tests/test_vault/docs/: tutorial.md
